--- a/PrzewodnikTurystyczny/res/values/strings.xml
+++ b/PrzewodnikTurystyczny/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Przewodnik Turystyczny</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_mapa">Mapa</string>
+    <string name="btn_mapa">Mapa</string>
 
 </resources>
