Działa wyświetlanie adresu po kliknięciu na dowolny punkt mapy: oparte na GeoCoder. - jako AsyncTask.
OPEN - task 9: Info o obiekcie pobierane z bazy, a jesli null to jakies
domyslne. 
http://github.com/blazej3k/dupcia/issues/issue/9

--- a/PrzewodnikTurystyczny/res/values/strings.xml
+++ b/PrzewodnikTurystyczny/res/values/strings.xml
@@ -8,9 +8,12 @@
     <string name="btn_mapa">Mapa</string>
     <string name="pompeczka_branza">Pompeczka - Branza</string>
     <string name="pompeczka_okres">Pompeczka - Okres</string>
+    <string name="pompeczka_rozne">Pompeczka - Różne</string>
     <string name="btn_count_okresy">Policz Okresy</string>
     <string name="btn_count_branze">Policz Branże</string>
     <string name="btn_czysc_okresy">Czyść Okresy</string>
     <string name="btn_czysc_branze">Czyść Branże</string>
-
+    <string name="demo_str">Test_Pindolino</string>
+	<string name="content_desc1">symbol obiektu</string>
+    
 </resources>
