--- a/PrzewodnikTurystyczny/res/values/strings.xml
+++ b/PrzewodnikTurystyczny/res/values/strings.xml
@@ -9,8 +9,7 @@
     <string name="pompeczka_branza">Pompeczka - Branza</string>
     <string name="pompeczka_okres">Pompeczka - Okres</string>
     <string name="pompeczka_rozne">Pompeczka - Różne</string>
-    <string name="btn_count_okresy">Policz Okresy</string>
-    <string name="btn_count_branze">Policz Branże</string>
+    <string name="btn_count_all">Zlicz tabele</string>
     <string name="btn_czysc_okresy">Czyść Okresy</string>
     <string name="btn_czysc_branze">Czyść Branże</string>
     <string name="demo_str">Test_Pindolino</string>
