Metoda automatycznie pobierająca współrzędne budynku mając jego adres z bazy. Współrzędne wprowadzane są do bazy.
Usunięcie SugarORM-a z zależności projektu i uporządkowanie części
importów.

CLOSED - task 24: Funkcja automatycznie dodająca współrzędne do obiektów
w bazie. 
http://github.com/blazej3k/dupcia/issues/issue/24

--- a/PrzewodnikTurystyczny/res/values/strings.xml
+++ b/PrzewodnikTurystyczny/res/values/strings.xml
@@ -12,9 +12,10 @@
     <string name="btn_count_all">Zlicz tabele</string>
     <string name="btn_czysc_okresy">Czyść Okresy</string>
     <string name="btn_czysc_branze">Czyść Branże</string>
+    <string name="btn_czysc_budynki">Czyść Budynki</string>
     <string name="demo_str">Test_Pindolino</string>
 	<string name="content_desc1">symbol obiektu</string>
 	<string name="et_podaj_adres">Wprowadź adres</string>
 	<string name="btn_znajdz">Znajdź</string>
-    
+	
 </resources>
