CLOSED - task 16: Jeden przycisk do czyszczenia całej bazy. http://github.com/blazej3k/dupcia/issues/issue/16
Oraz wydzielenie klasy Namierzanie.

--- a/PrzewodnikTurystyczny/res/values/strings.xml
+++ b/PrzewodnikTurystyczny/res/values/strings.xml
@@ -17,5 +17,8 @@
 	<string name="content_desc1">symbol obiektu</string>
 	<string name="et_podaj_adres">Wprowadź adres</string>
 	<string name="btn_znajdz">Znajdź</string>
+	<string name="btn_namierz_budynki">Namierz Budynki</string>
+	<string name="btn_namierz_miejsca">Namierz Miejsca</string>
+	<string name="btn_czysc_wsio">Czyść Wsio</string>
 	
 </resources>
