--- a/PrzewodnikTurystyczny/res/values/strings.xml
+++ b/PrzewodnikTurystyczny/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="btn_mapa">Mapa</string>
     <string name="pompeczka_branza">Pompeczka - Branza</string>
     <string name="pompeczka_okres">Pompeczka - Okres</string>
-    <string name="pompeczka_rozne">Pompeczka - Różne</string>
+    <string name="pompeczka_budynki">Pompeczka - Budynki</string>
+    <string name="pompeczka_miejsca">Pompeczka - Miejsca</string>
     <string name="btn_count_all">Zlicz tabele</string>
     <string name="btn_czysc_okresy">Czyść Okresy</string>
     <string name="btn_czysc_branze">Czyść Branże</string>
