--- a/PrzewodnikTurystyczny/res/values/strings.xml
+++ b/PrzewodnikTurystyczny/res/values/strings.xml
@@ -10,16 +10,21 @@
     <string name="pompeczka_okres">Pompeczka - Okres</string>
     <string name="pompeczka_budynki">Pompeczka - Budynki</string>
     <string name="pompeczka_miejsca">Pompeczka - Miejsca</string>
+    <string name="pompeczka_wydarzenia">Pompeczka - Wydarzenia</string>
+    <string name="pompeczka_x">Pompeczka - X</string>
+    <string name="btn_relacje_miej_wyd">Rel - MiejWyd</string>
+    <string name="btn_relacje_x">Relacje - X</string>
     <string name="btn_count_all">Zlicz tabele</string>
     <string name="btn_czysc_okresy">Czyść Okresy</string>
     <string name="btn_czysc_branze">Czyść Branże</string>
     <string name="btn_czysc_budynki">Czyść Budynki</string>
+    <string name="btn_czysc_wsio">Czyść Wsio</string>
     <string name="demo_str">Test_Pindolino</string>
 	<string name="content_desc1">symbol obiektu</string>
 	<string name="et_podaj_adres">Wprowadź adres</string>
 	<string name="btn_znajdz">Znajdź</string>
 	<string name="btn_namierz_budynki">Namierz Budynki</string>
 	<string name="btn_namierz_miejsca">Namierz Miejsca</string>
-	<string name="btn_czysc_wsio">Czyść Wsio</string>
+	<string name="btn_select_all">Select All</string>
 	
 </resources>
