OPEN - task 36: Wprowadzić więcej RELACJI. http://github.com/blazej3k/dupcia/issues/issue/36

--- a/PrzewodnikTurystyczny/res/values/strings.xml
+++ b/PrzewodnikTurystyczny/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="pompeczka_budynki">Pompeczka - Budynki</string>
     <string name="pompeczka_miejsca">Pompeczka - Miejsca</string>
     <string name="pompeczka_wydarzenia">Pompeczka - Wydarzenia</string>
-    <string name="btn_relacje_miej_wyd">Rel - MiejWyd</string>
+    <string name="btn_relacje">Relacje</string>
     <string name="btn_relacje_x">Relacje - X</string>
     <string name="btn_count_all">Zlicz tabele</string>
     <string name="btn_czysc_okresy">Czyść Okresy</string>
