Okno szczegółów skończone.

--- a/PrzewodnikTurystyczny/res/values/strings.xml
+++ b/PrzewodnikTurystyczny/res/values/strings.xml
@@ -29,5 +29,11 @@
 	<string name="ab_czerwony">Czerwony</string>
 	<string name="ab_niebieski">Niebieski</string>
 	<string name="ab_zielony">Zielony</string>
+	<string name="lbl_dialog_pole1">Adres:</string>
+	<string name="lbl_dialog_pole2">Projektant:</string>
+	<string name="lbl_dialog_pole3">Data powstania:</string>
+	<string name="lbl_dialog_pole4">Pole:</string>
+	<string name="lbl_dialog_pole5">Pole:</string>
+	<string name="lbl_dialog_opis">Opis:</string>
 	
 </resources>
