Dodana do indeksu brakująca klasa App.java -> rozszerza Application i jest domyślną klasą aplikacyjną teraz (w Manifest). Wstęp do stworzenie listy wyboru kategorii.

--- a/PrzewodnikTurystyczny/res/values/strings.xml
+++ b/PrzewodnikTurystyczny/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="lbl_dialog_pole5">Pole:</string>
     <string name="lbl_dialog_opis">Opis:</string>
     <string name="title_activity_lista_exp">ListaExp</string>
+    <string name="title_activity_wyszukiwanie">Wyszukiwanie</string>
+    <string name="tv_wybierz_kategorie">Wybierz kategorię poszukiwań:</string>
 
 </resources>
