--- a/PrzewodnikTurystyczny/res/values/strings.xml
+++ b/PrzewodnikTurystyczny/res/values/strings.xml
@@ -37,6 +37,8 @@
     <string name="lbl_dialog_opis">Opis:</string>
     <string name="title_activity_lista_exp">ListaExp</string>
     <string name="title_activity_wyszukiwanie">Wyszukiwanie</string>
-    <string name="tv_wybierz_kategorie">Wybierz kategorię poszukiwań:</string>
+    <string name="lbl_wybierz_kategorie">Wybierz zakres poszukiwań:</string>
+    <string name="lbl_wybierz_szczegol">Z poniższej listy wybierz interesujący Cię obiekt:</string>
+    <string name="btn_przejdz_do_zwiedzania">Przejdź do Zwiedzania</string>
 
 </resources>
